# geo-sim

./: .gitignore  CLAUDE.md  ONBOARDING.md  PLATEAU_RESEARCH.md  README.md  docker-compose.yml  pyproject.toml
data/raw/: stations_central3.csv
db/: init.sql
destructed/model/: gravity.py
destructed/tests/: test_geocoding.py
docs/: app.js  index.html
src/geo_sim/: cli.py
src/geo_sim/data/: geocoding.py  mesh_loader.py  station_loader.py
src/geo_sim/explorer/: cli.py  crowd_pattern.py  osm_fetcher.py  profile.py
src/geo_sim/model/: catchment.py  sales_estimator.py
tests/: test_explorer.py  test_gravity.py  test_mesh.py
web/: .env.example  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/explore/: route.ts
web/components/: hourly-chart.tsx  map-view.tsx  score-bar.tsx  sidebar.tsx
web/lib/: analyzer.ts  cache.ts  constants.ts  overpass.ts  profile.ts  rate-limiter.ts
