[project]
name = "geo-sim"
version = "0.1.0"
description = "店舗売上ポテンシャルシミュレータ（人流データ×重力モデル）"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "typer>=0.9",
    "plotly>=5.0",
]

[project.scripts]
geo-sim = "geo_sim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
