[project]
name = "geo-sim"
version = "0.2.0"
description = "街プロファイリングツール — 地点の「街の性格」を分析する"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy",
    "typer>=0.9",
]

[project.scripts]
geo-sim = "geo_sim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
